# obscuravpn-api

./: .editorconfig  .gitignore  Cargo.toml  README.md  about.toml  flake.nix  justfile
.github/workflows/: checks.yml
examples/: api_cli.rs  gen_id.rs
src/: check.rs  client.rs  lib.rs  notices.rs  token.rs  types.rs  wg_conf.rs
src/cmd/: exit.rs  exit2.rs  lightning.rs  mod.rs  prices.rs  relay.rs
src/cmd/account/: info.rs  mod.rs
src/cmd/stripe/: mod.rs  subscription.rs  top_up.rs
src/cmd/tunnel/: create.rs  delete.rs  list.rs  mod.rs
