[package]
name = "obscuravpn-api"
version = "0.5.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
anyhow = "1"
base64 = "0.21"
http = { version = "1" }
ipnetwork = "0.16"
itertools = "0.12.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"], optional = true }
semver = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["net"] }
tracing = "0.1.40"
url = "2"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[features]
client = ["reqwest"]
default = ["client"]

[dev-dependencies]
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
qrcode = "0.14.1"
rand = { version = "0.8", features = ["getrandom"] }
tokio = { version = "1", features = ["full"] }
verhoeff = "1.0.0"
x25519-dalek = { version = "2", features = ["static_secrets"] }
